--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-slack-bolt
-httpx
-python-dotenv
+slack-bolt==1.26.0
+fastapi==0.121.1
+uvicorn[standard]==0.38.0
+httpx==0.28.1
+python-dotenv==1.2.1
